# reddit-research-mcp

./: .coveragerc  .dockerignore  .env  .env.sample  .gitignore  AUTH_SETUP.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  ROADMAP.md  check_workos_config.py  docker-compose.yml  package.json  pyproject.toml  run_critical_tests.sh  run_local.sh  run_with_auth.sh  server.json  smithery.yaml  test_auth_client.py  test_connection.py  test_fix.py  test_indexer.py  test_oauth_flow.py
.gemini/: settings.json
ai-docs/: anthropic-building-effective-agents.md  anthropic-multi-agent-research-system.md  reddit-mcp-tools-reference.md
docs/: DUAL_ISSUER_AUTH.md  LANGFUSE_INTEGRATION.md
reports/: ai-llm-weekly-trends-reddit-analysis-2025-01-20.md  alterego-mit-bci-reddit-analysis-2025-01-28.md  fastmcp-prompts-best-practices-reddit-analysis.md  fastmcp-prompts-best-practices.md  mcp-prompts-best-practices-2025-01-16.md  python-testing-frameworks-reddit-analysis-2025-01-28.md  python-testing-frameworks-velocity-report-2025.md  saas-solopreneur-reddit-communities.md  sf-alcohol-event-permits-reddit-analysis-2025-01-28.md  top-50-active-AI-subreddits.md  top-50-subreddits-saas-ai-builders.md  top-50-subreddits-saas-solopreneurs.md
scripts/: test_observability.py  test_operations_tracking.py
specs/: agentic-discovery-architecture.md  workos-auth-implementation-plan.md
src/: chroma_client.py  config.py  middleware.py  models.py  resources.py  server.py
tests/: README.md  conftest.py  test_config.py  test_context_integration.py  test_e2e_smoke.py  test_langfuse_critical.py  (+3 more)
(+171 files in other folders)
