[project]
name = "reddit-research-mcp"
version = "0.1.0"
description = "A minimal Model Context Protocol server for Reddit content access"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "praw>=7.7.1",
    "chromadb>=0.5.0",
    "fastmcp>=0.8.0",
    "openai-agents>=0.2.8",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.32.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
reddit-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
